[package]
name = "simple-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
rustix = { version = "0.38", features = ["event", "time", "pipe", "fs", "net"] }
pin-project-lite = "0.2.16"
futures-io = "0.3"
futures-core = "0.3"
log = "0.4"

[dev-dependencies]
futures-lite = "2.6.0"
env_logger = "0.11.6"
flume = "0.11"
