[package]
name = "local-runtime"
version = "0.2.0"
edition = "2021"
authors = ["Yuhan Lin <yuhanliin@protonmail.com>"]
description = "Thread-local async runtime"
keywords = ["async", "poll", "future", "io", "networking"]
categories = ["asynchronous", "network-programming", "os", "concurrency"]
readme = "README.md"
repository = "https://github.com/YuhanLiin/local-runtime"
rust-version = "1.84.0"
license = "MIT OR Apache-2.0"

[dependencies]
rustix = { version = "0.38", features = ["event", "time", "pipe", "fs", "net"] }
pin-project-lite = "0.2.16"
futures-io = "0.3"
futures-core = "0.3"
log = "0.4"
slab = "0.4.9"
atomic-waker = "1.1"
# Only needed for cross-thread task wakeups
concurrent-queue = "2.5"

[dev-dependencies]
futures-lite = "2.6.0"
env_logger = "0.11.6"
flume = "0.11"
signal-hook = "0.3.17"
hyper = { version = "1.6.0", features = ["http1", "client"] }
http-body-util = "0.1.2"
